<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/MaterialAppTheme"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/mulibold"
            android:text="@string/forensika"
            android:textColor="@color/merahaksen"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/logologin"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/mulibold"
            android:text="@string/masuk"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textview_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muliregular"
                android:hint="@string/masukkan_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/KataSandi"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            app:passwordToggleDrawable="@drawable/showhidepassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textview_sandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muliregular"
                android:hint="@string/masukkan_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp">

            <CheckBox
                android:id="@+id/checkbox_ingat_saya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muliregular"
                android:text="@string/ingat_saya"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lupa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:fontFamily="@font/muliregular"
                android:text="@string/lupa_sandi"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <Button
            android:id="@+id/masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_hijau"
            android:fontFamily="@font/mulibold"
            android:text="@string/masuk"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muliregular"
                android:text="@string/belum_punya_akun"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dftr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/a"
                android:layout_toRightOf="@id/a"
                android:background="@color/white"
                android:fontFamily="@font/mulibold"
                android:text="@string/daftar"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>